added wand recipe datagen, and cleaned up wandforging menu